gerando Token para login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
+
+api.security.token.secret=FXfhtoUxvL4isY7lUAA7XhVfiZdoa3yNbgcLRRLVEyroJO8SR3
