--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+server.port=0
+spring.application.name=usuario-service
+
 logging.level.root=INFO
 logging.level.org.springframework=INFO
 logging.level.com.grupo16.usuarioservice=TRACE
@@ -18,7 +21,7 @@ spring.datasource.hikari.maxLifetime=1800000
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
-spring.jpa.generate-ddl=false
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
 
 api.security.token.secret=FXfhtoUxvL4isY7lUAA7XhVfiZdoa3yNbgcLRRLVEyroJO8SR3
